--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <!--
       Link al tema correspondiente de Semantic UI React
     -->
-    <title>React App</title>
+    <title>MoLE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
